third_party/move/move-compiler-v2/tests/more-v1/parser/match_neg_double.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/match_neg_double.move:4:13
  │
4 │             - -1 => 1,
  │             ^
  │             │
  │             Unexpected '-'
  │             Expected a variable or struct or variant name
