third_party/move/move-compiler-v2/tests/more-v1/parser/match_neg_double.move
module 0xc0ffee::m {
    fun double_neg(x: i8): i8 {
        match (x) {
            - -1 => 1,
            _ => 0,
        }
    }
}
